welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:5: error: ')' expected but 'if' found.
if ( (you<=2 || date<=2)){ 
^